# cmake-cuda

./: CMakeLists.txt  example.cpp  example.cu  example.cuh  example.hpp  exec.cpp
